# spot-infrastructure-defect-detection

./: .gitignore  README.md  requirements-field.txt
config/: field.env.example
install/: local_setup.sh  setup.sh
install/defect_detection/lib/defect_detection/: fusion_node  image_publisher  image_subscriber  point_cloud_subscriber  yolo_detector
install/defect_detection/share/defect_detection/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/defect_detection/share/defect_detection/launch/: defect_detection.launch.xml
install/defect_detection/share/defect_detection/models/: dataset.yaml
log/: latest_build  latest_test  latest_test-result
scripts/: bootstrap_field_machine.sh  export_field_bundle.sh  field_preflight.sh  run_field.sh  run_isaac_fusion.sh
scripts/isaac/: README.md  full_3d_fusion_stage.py
src/defect_detection/: package.xml  setup.cfg  setup.py
src/defect_detection/config/: defect_visualization.rviz  isaac_sim_calibration.yaml  navigation_priorities.yaml  site_calibration.yaml
src/defect_detection/defect_detection/autonomous_navigation/: __init__.py  navigator.py  planning.py
src/defect_detection/defect_detection/defect_detection/: fusion_node.py  visualization_node.py  yolo_detector.py
src/defect_detection/defect_detection/defect_localization/: extract_3d_detections.py
src/defect_detection/defect_detection/digital_twin/: defect_map_node.py  frame_anchor_node.py  frontier_planner.py  infrastructure_planner.py  oak_depth_fusion_node.py  oak_localization_bridge.py  pointcloud_to_occupancy.py  robot_goal_bridge.py  scan_decision_node.py  trimble_scan_watcher.py  trimble_windows_bridge.py
src/defect_detection/defect_detection/pointcloud_loading/: point_cloud_subscriber.py
src/defect_detection/defect_detection/spot_cam_loading/: image_publisher.py  image_subscriber.py
src/defect_detection/launch/: defect_detection.launch.xml
src/defect_detection/models/: dataset.yaml
src/defect_detection/test/: test_autonomous_navigation.py  test_fusion_pipeline.py  test_oak_depth_fusion_node.py  test_robot_goal_bridge.py  test_visualization_node.py
src/pointcloud_bridge/: setup.py
src/pointcloud_bridge/config/: bridge.yaml
src/pointcloud_bridge/test/: test_pointcloud_bridge.py
src/spot_eap_bridge/: README.md  package.xml  setup.cfg  setup.py
src/spot_eap_bridge/config/: bridge.yaml
src/spot_eap_bridge/launch/: full_pipeline.launch.xml  pointcloud_bridge.launch.xml  spot_eap_bridge.launch.xml
src/spot_eap_bridge/pointcloud_bridge/: pointcloud_bridge.py
src/spot_eap_bridge/resource/: pointcloud_bridge
src/spot_eap_bridge/spot_eap_bridge/: pointcloud_bridge.py  spot_sdk_pointcloud.py
src/spot_eap_bridge/test/: test_pointcloud_bridge.py  test_spot_sdk_pointcloud.py
tools/trimble_perspective_bridge/: Launch Trimble Bridge.bat  README.md  windows_app.py
